@@ -329,7 +329,7 @@ def _exec_template(callable_, context, args=None, kwargs=None):
                 if not result:
                     raise error
             else:
-                context._buffer_stack = [util.StringIO()]
+                context._buffer_stack[:] = [util.FastEncodingBuffer()]
                 error_template = exceptions.html_error_template()
                 context._with_template = error_template
                 error_template.render_context(context, error=error)
